FIX _7_concurrent._hw._hw_2